package modelo.enums;

public enum EstadoCita {
    EN_ESPERA,
    CONFIRMADA,
    EN_ATENCION,
    COMPLETADA,
    CANCELADA
}
