package modelo.enums;

public enum GrupoSanguineo {
    A_POSITIVO,
    A_NEGATIVO,
    B_POSITIVO,
    B_NEGATIVO,
    AB_POSITIVO,
    AB_NEGATIVO,
    O_POSITIVO,
    O_NEGATIVO
}
